// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore-document-from-recycle-bin should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`restore-document-from-recycle-bin should restore a document from recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
